Added the dark/light mode

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 </head>
 <body>
   <div class="container">
-    <div id="header">tp</div>
-    <div id="main">
-      <div id="aside">1 <br>2 <br>3<br>4<br>5<br>6</div>
-      <p id="output"></p>
-    </div>
-  </div>  
+    <select name="theme" id="theme-selector">
+      <option value="light">Light</option>
+      <option value="system">System</option>
+      <option value="dark">Dark</option>
+    </select>
+    <div class="code-window">
+      <div id="header"></div>
+      <div id="main">
+        <div id="aside">1 <br>2 <br>3<br>4<br>5<br>6</div>
+        <p id="output"></p>
+      </div>
+    </div>  
+  </div>
 <script defer src="script.js"></script>
 </body>
 </html>
