--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 <body>
   <div class="container">
-    <select name="theme" id="theme-selector">
-      <option value="light">Light</option>
-      <option value="system">System</option>
-      <option value="dark">Dark</option>
-    </select>
+    <div class="contrast">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M448 256c0-106-86-192-192-192V448c106 0 192-86 192-192zM0 256a256 256 0 1 1 512 0A256 256 0 1 1 0 256z"/></svg>
+      <select name="theme" id="theme-selector">
+        <option value="light">Light</option>
+        <option value="system">System</option>
+        <option value="dark">Dark</option>
+      </select>
+    </div>
     <div class="code-window">
       <div id="header"></div>
       <div id="main">
@@ -22,6 +25,9 @@
         <p id="output"></p>
       </div>
     </div>  
+     <div style="width:100%; margin: 20px">
+    <a href="https://github.com/hamentag/motivation" target="_blank" style="color: green; font-size: 20px; text-decoration: none;">GitHub Repository </a>
+  </div>
   </div>
 <script defer src="script.js"></script>
 </body>
